solve overlaping inflation items

--- a/style.css
+++ b/style.css
@@ -156,15 +156,21 @@ nav {
 }
 
 .inflation {
-  width: 1000px;
+  width: 1100px;
   margin: 0 auto;
   align-items: center;
+  padding-left: 5px;
 }
 
 .inflation-items {
-  width: 25%;
+  width: 250px;
   float: left;
   font-size: 14px;
+  padding-right: 10px;
+}
+
+.clear {
+  clear: both;
 }
 
 .inflaton h2 {
